--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    	<meta http-equiv="X-UA-Compatible" content="ie=edge" >
    
    	<!--Llamado a documento css-->
-	<link rel="stylesheet" href="tarea4.css"> 
+	<link rel="stylesheet" href="css/tarea4.css"> 
    	
    	<!--Llamado a documento javascript-->
    	<script src="tarea4.js"></script>    
