--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    	<meta charset="UTF-8">
 	<title>Operaciones matemáticas</title> <!--Titulo de cabecera-->
 
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
