--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/tarea4.css"> 
    	
    	<!--Llamado a documento javascript-->
-   	<script src="tarea4.js"></script>    
+   	<script src="js/tarea4.js"></script>    
 
 </head>
 <body>
